--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="style(Dup).css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
       <ul>
-        <li>MyTicTacToe.com</li>
+        <li>HurryUp For Play The Game..!!!</li>
       </ul>
     </nav>
 
@@ -38,6 +38,6 @@
         </div>
       </div>
     </div>
-    <script src="script(Dup).js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
